[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/HUD/Forge/HUD Forge Slider.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/ForgeHUD.gd" type="Script" id=2]
[ext_resource path="res://Sprites/HUD/Forge/HUD Forge Background.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HUD/Forge/HUD Forge Knob.png" type="Texture" id=4]
[ext_resource path="res://Fonts/kenney_fontpackage/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=5]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 50, 7 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 5 )

[node name="ForgeHUD" type="TextureRect"]
margin_left = 125.0
margin_top = 61.0
margin_right = 195.0
margin_bottom = 115.0
texture = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IronAmountHSlider" type="HSlider" parent="."]
margin_left = 7.0
margin_top = 39.0
margin_right = 59.0
margin_bottom = 50.0
custom_icons/tick = SubResource( 1 )
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = 1.0
max_value = 10.0
value = 1.0
rounded = true
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IronAmountLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 16.0
margin_right = 22.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="IronAmountHSlider" to="." method="_on_HSlider_value_changed"]
